# dns-shop-parser

./: .coveragerc  .env.example  .gitignore  ADMIN_PANEL_GUIDE.md  ADMIN_PANEL_IMPLEMENTATION.md  ADMIN_QUICK_START.md  CHANGELOG.md  CLAUDE.md  FAILURE_RECOVERY.md  INSTALLATION.md  LINUX_SETUP.md  QUICKSTART_LINUX.sh  README.md  START.txt  SYNC_DEBUG.md  TROUBLESHOOTING_COOKIES.md  bot_only.py  collect_cities.js  config.py  dns-parser.sh  get_cookies.py  package-lock.json  package.json  parser.py  pyproject.toml  pytest.ini  requirements.txt  run.py  run_tests.bat  setup_telegram_bot.py  solve_qrator.js  test_admin_manual.py  test_bot_only.py  test_qrator.py
.github/: CODEOWNERS
data/: cities.py
dns_shop_parser/: __init__.py  __main__.py
docs/: INSTALLATION.md  LINUX_SETUP.md
parser/: __init__.py  browser_dns_parser.py  db_manager.py  exceptions.py  models.py  qrator_resolver.py  session_manager.py  simple_dns_parser.py
scripts/: QUICKSTART_LINUX.sh  cities_data.json  collect_cities.js  dns-parser.sh
services/: __init__.py  admin_panel.py  daily_scheduler.py  telegram_bot.py  telegram_notifier.py
tests/: conftest.py  requirements-test.txt  test_admin_logs_redaction.py  test_admin_notify.py  test_admin_panel.py  test_category_update_check.py  test_city_cookies.py  test_config.py  test_daily_scheduler_and_plans.py  test_daily_scheduler_details.py  test_db_manager.py  test_exceptions.py  test_migration.py  test_models.py  test_monitor_process_category.py  test_night_orchestrator.py  test_notifier.py  test_notifier_helpers.py  test_parser_soft_sold.py  (+18 more)
(+32 files in other folders)
